# slopenav

./: .coverage  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  METRICS.md  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/2026-05-real-traj/: generate_trajectories.py  run_e3.py  run_e4.py
benchmarks/2026-05-real-traj/cache/: e4_scores_full.jsonl
benchmarks/2026-05-real-traj/data/: traj_stats_dry.json  traj_stats_full.json  trajectories_dry.jsonl  trajectories_full.jsonl
benchmarks/2026-05-real-traj/results/: e3_metrics_full.json  e3_rows_full.jsonl  e4_analysis_full.json  e4_rows_full.jsonl
benchmarks/2026-05-sn-synthetic/: RESULT.md  run_sn_p0_p1.py  run_sn_p2_real.py  sn_p2_results.json  sn_results.json
docs/: ALGORITHM.md  EXPERIMENTS.md  INTEGRATIONS.md  PAPER.md  TESTING.md
docs/adr/: ADR-001-dual-slope-design.md
examples/: 01_minimal_decision.py  02_with_qag_gate.py  03_threshold_baseline_comparison.py  04_pivot_detection.py  README.md
src/slopenav/: __init__.py  nav.py
src/slopenav/decision/: __init__.py  tree.py
src/slopenav/diagnose/: __init__.py  diagnoser.py
src/slopenav/domain/: __init__.py  models.py
src/slopenav/slope/: __init__.py  ema.py  linear.py
src/slopenav/verdicts/: __init__.py  progress.py
tests/arch/: test_fitness_functions.py
tests/e2e/: test_e2e.py
tests/property/: test_properties.py
tests/unit/: test_decision_tree.py  test_diagnoser.py  test_slope.py
