[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slopenav"
version = "0.1.0"
description = "A stopping criterion for long-running coding agents (Self-Refine, Reflexion, Claude Code, Codex, AutoGen, CrewAI, Letta)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Yuli Gao" }]
keywords = ["llm", "agent", "coding-agent", "iteration", "convergence", "stopping-criterion", "self-refine", "reflexion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Zero required dependencies (pure-Python algorithm).
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.26"]   # 可选：加速矩阵运算（默认用纯 Python）
bench = [
    "slopenav[numpy]",
    "pandas>=2.0",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "hypothesis>=6.100",
]
dev = [
    "slopenav[numpy]",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]

[project.urls]
Homepage = "https://github.com/yoligehude14753/slopenav"
Documentation = "https://github.com/yoligehude14753/slopenav/blob/main/README.md"
Repository = "https://github.com/yoligehude14753/slopenav"
Issues = "https://github.com/yoligehude14753/slopenav/issues"
Paper = "https://github.com/yoligehude14753/slopenav/blob/main/docs/PAPER.md"

[tool.hatch.build.targets.wheel]
packages = ["src/slopenav"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/slopenav"]
omit = ["tests/*"]
